<resources>
    <string name="PM25">PM2.5</string>
    <string name="abc_action_bar_home_description">转到主屏幕</string>
    <string name="abc_action_bar_home_description_format">%1$s：%2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s - %2$s：%3$s</string>
    <string name="abc_action_bar_up_description">转到上一层级</string>
    <string name="abc_action_menu_overflow_description">更多选项</string>
    <string name="abc_action_mode_done">完成</string>
    <string name="abc_activity_chooser_view_see_all">查看全部</string>
    <string name="abc_activitychooserview_choose_application">选择应用</string>
    <string name="abc_capital_off">关闭</string>
    <string name="abc_capital_on">开启</string>
    <string name="abc_search_hint">搜索…</string>
    <string name="abc_searchview_description_clear">清除查询</string>
    <string name="abc_searchview_description_query">搜索查询</string>
    <string name="abc_searchview_description_search">搜索</string>
    <string name="abc_searchview_description_submit">提交查询</string>
    <string name="abc_searchview_description_voice">语音搜索</string>
    <string name="abc_shareactionprovider_share_with">分享方式</string>
    <string name="abc_shareactionprovider_share_with_application">通过%s分享</string>
    <string name="abc_toolbar_collapse_description">收起</string>
    <string name="location_id_hint">location id 用于刷新预警信息, 不需要不填</string>
    <string name="about">关于</string>
    <string name="absolute_humidity">g/m³ - 绝对湿度</string>
    <string name="agreement">用户协议</string>
    <string name="api_accu_weather_01">Sunny</string>
    <string name="api_accu_weather_02">Mostly Sunny</string>
    <string name="api_accu_weather_03">Partly Sunny</string>
    <string name="api_accu_weather_04">Intermittent Clouds</string>
    <string name="api_accu_weather_05">Hazy Sunshine</string>
    <string name="api_accu_weather_06">Mostly Cloudy</string>
    <string name="api_accu_weather_07">Cloudy</string>
    <string name="api_accu_weather_08">Dreary (Overcast)</string>
    <string name="api_accu_weather_11">Fog</string>
    <string name="api_accu_weather_12">Showers</string>
    <string name="api_accu_weather_13">Mostly Cloudy w/ Showers</string>
    <string name="api_accu_weather_14">Partly Sunny w/ Showers</string>
    <string name="api_accu_weather_15">T-Storms</string>
    <string name="api_accu_weather_16">Mostly Cloudy w/ T-Storms</string>
    <string name="api_accu_weather_17">Partly Sunny w/ T-Storms</string>
    <string name="api_accu_weather_18">Rain</string>
    <string name="api_accu_weather_19">Flurries</string>
    <string name="api_accu_weather_20">Mostly Cloudy w/ Flurries</string>
    <string name="api_accu_weather_21">Partly Sunny w/ Flurries</string>
    <string name="api_accu_weather_22">Snow</string>
    <string name="api_accu_weather_23">Mostly Cloudy w/ Snow</string>
    <string name="api_accu_weather_24">Ice</string>
    <string name="api_accu_weather_25">Sleet</string>
    <string name="api_accu_weather_26">Freezing Rain</string>
    <string name="api_accu_weather_29">Rain and Snow</string>
    <string name="api_accu_weather_30">Hot</string>
    <string name="api_accu_weather_31">Cold</string>
    <string name="api_accu_weather_32">Windy</string>
    <string name="api_accu_weather_33">Clear</string>
    <string name="api_accu_weather_34">Mostly Clear</string>
    <string name="api_accu_weather_35">Partly Cloudy</string>
    <string name="api_accu_weather_36">Intermittent Clouds</string>
    <string name="api_accu_weather_37">Hazy Moonlight</string>
    <string name="api_accu_weather_38">Mostly Cloudy</string>
    <string name="api_accu_weather_39">Partly Cloudy w/ Showers</string>
    <string name="api_accu_weather_40">Mostly Cloudy w/ Showers</string>
    <string name="api_accu_weather_41">Partly Cloudy w/ T-Storms</string>
    <string name="api_accu_weather_42">Mostly Cloudy w/ T-Storms</string>
    <string name="api_accu_weather_43">Mostly Cloudy w/ Flurries</string>
    <string name="api_accu_weather_44">Mostly Cloudy w/ Snow</string>
    <string name="api_aqi_level_five">重度污染</string>
    <string name="api_aqi_level_four">中度污染</string>
    <string name="api_aqi_level_na">该地区暂无数据</string>
    <string name="api_aqi_level_one">优</string>
    <string name="api_aqi_level_six">严重污染</string>
    <string name="api_aqi_level_three">轻度污染</string>
    <string name="api_aqi_level_two">良</string>
    <string name="api_china_weather_00">晴</string>
    <string name="api_china_weather_01">多云</string>
    <string name="api_china_weather_02">阴</string>
    <string name="api_china_weather_03">阵雨</string>
    <string name="api_china_weather_04">雷阵雨</string>
    <string name="api_china_weather_05">雷阵雨伴有冰雹</string>
    <string name="api_china_weather_06">雨夹雪</string>
    <string name="api_china_weather_07">小雨</string>
    <string name="api_china_weather_08">中雨</string>
    <string name="api_china_weather_09">大雨</string>
    <string name="api_china_weather_10">暴雨</string>
    <string name="api_china_weather_11">大暴雨</string>
    <string name="api_china_weather_12">特大暴雨</string>
    <string name="api_china_weather_13">阵雪</string>
    <string name="api_china_weather_14">小雪</string>
    <string name="api_china_weather_15">中雪</string>
    <string name="api_china_weather_16">大雪</string>
    <string name="api_china_weather_17">暴雪</string>
    <string name="api_china_weather_18">雾</string>
    <string name="api_china_weather_19">冻雨</string>
    <string name="api_china_weather_20">沙尘暴</string>
    <string name="api_china_weather_21">小到中雨</string>
    <string name="api_china_weather_22">中到大雨</string>
    <string name="api_china_weather_23">大到暴雨</string>
    <string name="api_china_weather_24">暴雨到大暴雨</string>
    <string name="api_china_weather_25">大暴雨到特大暴雨</string>
    <string name="api_china_weather_26">小到中雪</string>
    <string name="api_china_weather_27">中到大雪</string>
    <string name="api_china_weather_28">大到暴雪</string>
    <string name="api_china_weather_29">浮尘</string>
    <string name="api_china_weather_30">扬沙</string>
    <string name="api_china_weather_31">强沙尘暴</string>
    <string name="api_china_weather_32">浓雾</string>
    <string name="api_china_weather_33">雪</string>
    <string name="api_china_weather_49">强浓雾</string>
    <string name="api_china_weather_53">霾</string>
    <string name="api_china_weather_54">中度霾</string>
    <string name="api_china_weather_55">重度霾</string>
    <string name="api_china_weather_56">严重霾</string>
    <string name="api_china_weather_57">大雾</string>
    <string name="api_china_weather_58">特强浓雾</string>
    <string name="api_km">千米</string>
    <string name="api_m">米</string>
    <string name="api_pressure">百帕</string>
    <string name="api_weather_description_cloudy">多云</string>
    <string name="api_weather_description_downpour">大雨</string>
    <string name="api_weather_description_drizzle">小雨</string>
    <string name="api_weather_description_flurry">小雪</string>
    <string name="api_weather_description_fog">雾</string>
    <string name="api_weather_description_hail">冰雹</string>
    <string name="api_weather_description_haze">霾</string>
    <string name="api_weather_description_overcast">阴</string>
    <string name="api_weather_description_rain">中雨</string>
    <string name="api_weather_description_rainstorm">暴雨</string>
    <string name="api_weather_description_sandstorm">沙尘暴</string>
    <string name="api_weather_description_shower">阵雨</string>
    <string name="api_weather_description_sleet">雨夹雪</string>
    <string name="api_weather_description_snow">中雪</string>
    <string name="api_weather_description_snowstorm">大雪</string>
    <string name="api_weather_description_sunny">晴</string>
    <string name="api_weather_description_sunny_intervals">晴转多云</string>
    <string name="api_weather_description_thundershower">雷阵雨</string>
    <string name="api_weather_description_typhoon">台风</string>
    <string name="api_weather_description_unknown">未知</string>
    <string name="api_weather_unknown">未知</string>
    <string name="api_wind_direction_e">东风</string>
    <string name="api_wind_direction_ene">东东北风</string>
    <string name="api_wind_direction_ese">东东南风</string>
    <string name="api_wind_direction_n">北风</string>
    <string name="api_wind_direction_na">无持续风向</string>
    <string name="api_wind_direction_ne">东北风</string>
    <string name="api_wind_direction_nne">北东北风</string>
    <string name="api_wind_direction_nw">西北风</string>
    <string name="api_wind_direction_nwn">北西北风</string>
    <string name="api_wind_direction_rw">旋转风</string>
    <string name="api_wind_direction_s">南风</string>
    <string name="api_wind_direction_se">东南风</string>
    <string name="api_wind_direction_sse">南东南风</string>
    <string name="api_wind_direction_ssw">南西南风</string>
    <string name="api_wind_direction_sw">西南风</string>
    <string name="api_wind_direction_w">西风</string>
    <string name="api_wind_direction_wnw">西西北风</string>
    <string name="api_wind_direction_wsw">西西南风</string>
    <string name="api_wind_power_level_eight">10–11级</string>
    <string name="api_wind_power_level_five">7–8级</string>
    <string name="api_wind_power_level_four">6–7级</string>
    <string name="api_wind_power_level_nine">11–12级</string>
    <string name="api_wind_power_level_one">3–4级</string>
    <string name="api_wind_power_level_seven">9–10级</string>
    <string name="api_wind_power_level_six">8–9级</string>
    <string name="api_wind_power_level_three">5–6级</string>
    <string name="api_wind_power_level_two">4–5级</string>
    <string name="api_wind_power_level_zero">微风</string>
    <string name="app_name">天气</string>
    <string name="aqi_level_five">重度污染</string>
    <string name="aqi_level_four">中度污染</string>
    <string name="aqi_level_na">该地区暂无数据</string>
    <string name="aqi_level_one">优</string>
    <string name="aqi_level_six">严重污染</string>
    <string name="aqi_level_three">轻度污染</string>
    <string name="aqi_level_two">良</string>
    <string name="back_button_label">上一步</string>
    <string name="body_temp">体感温度</string>
    <string name="browser_not_found">未找到浏览器</string>
    <string name="c">℃</string>
    <string name="cancel">取消</string>
    <string name="capital_off">关闭</string>
    <string name="capital_on">开启</string>
    <string name="carwash_index_level_four">不宜</string>
    <string name="carwash_index_level_one">适宜</string>
    <string name="carwash_index_level_three">较不宜</string>
    <string name="carwash_index_level_two">较适宜</string>
    <string name="celsius">℃ - 摄氏度</string>
    <string name="check_new_version">检查新版本</string>
    <string name="check_version">查找新版本</string>
    <string name="china_weather">天气数据来源于中国天气网</string>
    <string name="city">市</string>
    <string name="city_count_limit">最多只能添加八个城市</string>
    <string name="city_exit">城市已存在</string>
    <string name="city_list_delete_city">删除城市</string>
    <string name="city_list_search_hint">城市名</string>
    <string name="city_list_select_city">选择城市</string>
    <string name="click_code_err">暗语:%1$s 错误!!!</string>
    <string name="click_url_text">点击查看未来15天天气情况</string>
    <string name="clothes_colder">冷</string>
    <string name="clothes_comfortable">舒适</string>
    <string name="clothes_hot">热</string>
    <string name="clothes_iceness">寒冷</string>
    <string name="clothes_more_colder">较冷</string>
    <string name="clothes_more_comfortable">较舒适</string>
    <string name="clothes_very_hot">炎热</string>
    <string name="company">深圳市万普拉斯科技有限公司 版权所有</string>
    <string name="current_location">北京</string>
    <string name="gan">/</string>
    <string name="insert_location">开启模拟定位</string>
    <string name="location_Latitude">纬度</string>
    <string name="location_id">城市ID</string>
    <string name="location_longitude">经度</string>
    <string name="menu_city_list">城市列表</string>
    <string name="menu_warning">預警</string>
    <string name="nothing">--</string>
    <string name="share">分享</string>
    <string name="title_settings">设置</string>
</resources>